--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   flutter_bloc: ^6.1.1
   flutter_svg: ^0.19.1
   equatable: ^1.2.5
+  firebase_core: ^0.7.0
+  firebase_crashlytics: ^0.4.0+1
+  firebase_analytics: ^7.0.1
   firebase_auth: ^0.20.0+1
   firebase_storage: ^7.0.0
   cloud_firestore: ^0.16.0
