--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   auto_route: ^0.6.9
   shared_preferences: ^0.5.12+4
   intl: ^0.16.1
+  lottie: ^0.7.0+1
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
@@ -45,12 +46,16 @@ flutter:
     - assets/fonts/
 
   fonts:
-    - family: Effra
+    - family: Montserrat
       fonts:
-        - asset: assets/fonts/Effra-Bold.ttf
+        - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
-        - asset: assets/fonts/Effra-Medium.ttf
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
-        - asset: assets/fonts/Effra-Light.ttf
+        - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Montserrat-Light.ttf
           weight: 300
 
