--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_messaging: ^6.0.16
   get_it: ^5.0.6
   provider: ^4.3.3
+  image_picker: ^0.6.7+21
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
