--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.16.1
   lottie: ^0.7.0+1
   google_sign_in: ^4.5.9
+  flutter_facebook_login: ^3.0.0
   firebase_messaging: ^6.0.16
   get_it: ^5.0.6
   provider: ^4.3.3
