--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   firebase_auth: ^0.20.0+1
   firebase_storage: ^7.0.0
   cloud_firestore: ^0.16.0
-  auto_route: ^0.6.9
   shared_preferences: ^0.5.12+4
   email_validator: ^1.0.6
   intl: ^0.16.1
@@ -33,6 +32,7 @@ dependencies:
   get_it: ^5.0.6
   provider: ^4.3.3
   image_picker: ^0.6.7+21
+  rxdart: ^0.25.0
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
