--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^4.3.3
   image_picker: ^0.6.7+21
   rxdart: ^0.25.0
+  dio: ^3.0.10
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
